Add trailhead button
Adicionando botão que leva ao trailhead da salesforce

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 aprofundando em
                 <span>HTML5, CSS3, JavaScript, NodeJS e ReactJS</span>. <br />
                 Estou em busca de um trabalho na área para me aprofundar nos
-                estudos e colocar em prática o que tenho aprendido<br />
+                estudos e colocar em prática o que tenho aprendido.<br />
                 Meus principais hobbies são astronomia, aviação e fazer um som
                 com os amigos.
               </p>
@@ -98,6 +98,15 @@
                   class="projetos"
                 >
                   Projetos
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://trailblazer.me/id/guipolo09"
+                  target="_blank"
+                  class="trailhead"
+                >
+                  Trailhead
                 </a>
               </li>
             </ul>
