--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
               <li>
                 <a
-                  href="https://www.linkedin.com/in/guilherme-polo-4a6a42234/"
+                  href="https://www.linkedin.com/in/guilhermepolo/"
                   target="_blank"
                   class="linkedin"
                 >
