--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="perfil">
         <img src="src/img/foto-perfil.png" alt="foto de perfil" />
         <h1 class="nome">Guilherme Polo</h1>
-        <h2 class="cargo">Desenvolvedor Full Stack</h2>
+        <h2 class="cargo">Desenvolvedor Front-end</h2>
       </div>
 
       <div class="conteudo">
@@ -46,12 +46,11 @@
               </p>
               <br />
               <p>
-                Sou músico, professor e produtor, estudo desenvolvimento web
-                para transição de carreira. Atualmente estudando e me
-                aprofundando em
-                <span>HTML5, CSS3, JavaScript, NodeJS e ReactJS</span>. <br />
-                Estou em busca de um trabalho na área para me aprofundar nos
-                estudos e colocar em prática o que tenho aprendido.<br />
+                Sou músico, professor e produtor, estudo Analise e Desenvolvimento de Sistamas na<br />
+                Faculdade Anhanguera por EAD.<br /> 
+                Tenho sólidos conhecimentos em <span>HTML5, CSS3, JavaScript, NodeJS e ReactJS</span>. <br />
+                Também tenho conhecimento em metodologias ágeis e projetos. Atualmente trabalhando 
+                como estagiário no controle, tratamento e análise de pedidos<br />
                 Meus principais hobbies são astronomia, aviação e fazer um som
                 com os amigos.
               </p>
@@ -62,16 +61,6 @@
             <h3 class="sub-titulo">Minhas Redes</h3>
 
             <ul class="redes-sociais">
-              <li>
-                <a
-                  href="https://drive.google.com/file/d/1lE7zDAoMxdBX28qfYRIfvEg-_qaySZko/view?usp=sharing"
-                  target="_blank"
-                  class="curriculo"
-                >
-                  Currículo
-                </a>
-              </li>
-
               <li>
                 <a
                   href="https://www.linkedin.com/in/guilhermepolo/"
@@ -98,15 +87,6 @@
                   class="projetos"
                 >
                   Projetos
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://trailblazer.me/id/guipolo09"
-                  target="_blank"
-                  class="trailhead"
-                >
-                  Trailhead
                 </a>
               </li>
             </ul>
