--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </li>
               <li>
                 <a
-                  href="https://portifolio-nu-nine.vercel.app/"
+                  href="https://portifolio-git-main-guipolo09.vercel.app/"
                   target="_blank"
                   class="projetos"
                 >
